# signature_extractor_consumer

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/application/: mod.rs  ports.rs  use_cases.rs
src/domain/: models.rs
src/infra/: mod.rs
src/infra/adapter/: api.rs  mod.rs  mongo.rs  nats.rs
