[package]
name = "signature_extractor_consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3.31"
mongodb = "2.8" 
router = "0.6.0"
